--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
         <activity
             android:name=".View.MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/main_title"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -29,12 +29,14 @@
         <activity
             android:name=".View.StatisticsActivity"
             android:label="Players statistics"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"></activity>
 
         <activity
             android:name=".View.SettingsActivity"
             android:label="Settings"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         </activity>
 
         <activity
@@ -52,6 +54,7 @@
         <activity
             android:name=".View.PlayerParticipationActivity"
             android:label="Player's success with/vs teammates"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"></activity>
 
         <provider
