--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .gradle
 /local.properties
 /.idea/workspace.xml
+/.idea/misc.xml
 /.idea/libraries
 /build
 /captures
@@ -48,6 +49,7 @@ Thumbs.db
 # Built application files
 *.apk
 *.ap_
+*.aab
 
 # Files for the ART/Dalvik VM
 *.dex
