--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,9 @@ android {
         applicationId "com.teampicker.drorfichman.teampicker"
         minSdkVersion 26
         targetSdkVersion 30
-        versionCode 17
-        versionName "0.9.3.0.0"
+        versionCode 18
+        versionName "0.9.3.0.1"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -40,6 +41,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
     implementation 'com.google.firebase:firebase-analytics:20.0.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-alpha05'
+    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
 
 }
 
