--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,13 @@ android {
     lintOptions {
         abortOnError false
     }
+    namespace 'com.teampicker.drorfichman.teampicker'
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.ajts.androidmads.SQLite2Excel:library:1.0.2'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'com.google.android.material:material:1.6.0-alpha01'
     implementation 'androidx.preference:preference:1.1.1'
@@ -46,7 +47,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-alpha05'
     androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
