--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     // MPAndroidChart for visualizations
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    // TapTargetView for modern spotlight tutorials
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.3'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-alpha05'
     androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
 
