--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,3 @@
-<<<<<<< HEAD
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/misc.xml
-/.idea/libraries
-/build
-/captures
-
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-=======
 # Built application files
 *.apk
 *.ap_
@@ -88,6 +40,7 @@ captures/
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+.idea/misc.xml
 
 # Keystore files
 *.jks
@@ -102,4 +55,38 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
->>>>>>> 5fadd59b2b9a04e295cedfd32ca45464833ce49d
+
+# Node.js
+node_modules/
+scripts/node_modules/
+scripts/serviceAccountKey.json
+
+# Compiled source
+*.com
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Databases
+*.sql
+*.sqlite
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
