--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Admin scripts for TeamPicker Firebase operations",
   "scripts": {
-    "copy-games": "node copy-games.js"
+    "copy-games": "node copy-games.js",
+    "user-stats": "node user-stats.js"
   },
   "dependencies": {
     "firebase-admin": "^12.0.0"
